# Phylacterie

./: .gitignore  CMakeLists.txt  LLVMPYPlayground.pyproj  LLVMPYPlayground.sln  Phylacterie.pyproj  Phylacterie.sln  README.md  main.cpp  main.py  test.py
CPP/: CMakeLists.txt  vcpkg.json
CPP/Source/: Context.cpp  main.cpp
CPP/Source/AST/: Call.cpp  Function.cpp  FunctionDeclaration.cpp  FunctionDeclaration.h  Variable.cpp  Variable.h
CPP/Source/Parser/: Lexer.cpp  Parser.cpp  Parser.h  Token.h
CS/LLVMSharp/: CodeGenParserListener.cs  CodeGenVisitor.cs  LLVMSharp.sln  LLVMSharpPlayground.csproj  LLVMSharpPlayground.sln  Program.cs
PY/LLVMPYPlayground/: LLVMPYPlayground.py  LLVMPYPlayground.pyproj  main.phy  main.py
PY/LLVMPYPlayground/Phylacterie/: CodeGenerator.py  LLVMCodeGenerator.py  LanguageEvaluator.py  Lexer.py  Parser.py  Phylacterie.py  Token.py  __init__.py  irType2cType.py
PY/LLVMPYPlayground/Phylacterie/AST/: ASTNode.py  BinaryExprAST.py  CallExprAST.py  CodegenError.py  ExprAST.py  ForExprAST.py  FunctionAST.py  IfExprAST.py  NumberExprAST.py  PrototypeAST.py  ScopeAST.py  Token.py  UnaryExprAST.py  VarExprAST.py  VariableExprAST.py  WhileExprAST.py  WhileLoopExprAST.py  __init__.py
PY/LLVMPYPlayground/Phylacterie/Test/: TestEvaluator.py  TestParser.py
PY/LLVMPYPlayground/pykaleidoscope-master/: chapter1and2.py  chapter3and4.py  chapter5.py  chapter6.py  chapter7and8.py
Phylacterie/: CodeGenerator.py  GenericParser.py  Lexer.py  Parser.py  Phylacterie.py  irType2cType.py  irType2string.py  string2irType.py
Phylacterie/AST/: ASTNode.py  BinaryExprAST.py  BoolExprAST.py  CallExprAST.py  ClassExprAST.py  DatatypeAST.py  DoubleExprAST.py  ExprAST.py  FunctionAST.py  IdentifierPreAST.py  IfExprAST.py  IntExprAST.py  OperatorPreAST.py  OperatorType.py  PrototypeAST.py  ScopeAST.py  Token.py  UnaryExprAST.py  VarExprAST.py  VariableExprAST.py  WhileExprAST.py  __init__.py
Phylacterie/BuiltIn/: __init__.py  putchard.py
Phylacterie/Core/: ClassContainer.py  Core.py  OperatorContainer.py  TypeContainer.py  Types.py  VariableContainer.py  __init__.py
Source/: Context.cpp  Context.h  main.cpp
Source/AST/: Binary.cpp  Binary.h  Call.cpp  Call.h  Expression.cpp  Expression.h  Function.cpp  Function.h  FunctionDeclaration.cpp  FunctionDeclaration.h  Number.cpp  Number.h  Variable.cpp  Variable.h
Source/Parser/: Lexer.h  Parser.cpp  Parser.h
env/Scripts/: activate  activate.bat
